# minimal-signaling-llm-agents

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  DASHBOARD_README.md  README.md  RESEARCH_SUMMARY.md  THESIS_UPDATE_DOCUMENT.md  UPDATED_ARCHITECTURE.md  analyze_results.py  check_api_keys.py  check_decoded_tokens.py  check_token_count.py  debug_decoder_input.py  generate_2k_message.py  generate_long_message.py  hierarchical_test_results.json  inspect_signal.py  iterative_results.json  long_message_results.json  long_test_message.txt  message_2k.txt  pyproject.toml  sample_messages.txt  test_1210_token_message.py  test_2k_message.py  test_2k_run_20260219_054348.json  test_decoder_fix.py  test_graph_encoding.py  test_graph_extraction.py  test_hierarchical.py  test_hierarchical_long_message.py  test_iterative.py  test_iterative_graph.py  test_long_message.py  test_long_message_debug.py  test_msp.py  test_msp_direct.py  test_organic_agents.py  test_run_20260219_053921.json  test_simple_tree.py  test_single_iteration.py  (+2 more)
.kiro/specs/mediated-minimal-signaling/: design.md  requirements.md  tasks.md
.kiro/specs/semantic-protocol/: design.md  requirements.md  tasks.md
config/: default.yaml
data/: hierarchical_test_results.json  run_20260219_084300.json  run_20260219_084909.json  run_20260219_085204.json  run_20260219_085652.json  run_20260219_090200.json  run_20260219_092223.json  run_20260219_092655.json
decoder_test_results/: comparison.html  results.json
decoder_test_results/visualizations/: iteration_1.html  iteration_2.html  iteration_3.html
final_test_results/: comparison.html  results.json
final_test_results/visualizations/: iteration_1.html  iteration_2.html  iteration_3.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Dashboard.css  Dashboard.tsx  PipelineFlow.tsx  SemanticTree.css  SemanticTree.tsx  index.css
graph_viz/: comparison.html  final_iteration.html  graph_compressed.html  graph_original.html
long_message_results/: comparison.html  results.json
long_message_results/visualizations/: iteration_1.html  iteration_2.html  iteration_3.html  iteration_4.html  iteration_5.html
src/minimal_signaling/: __init__.py  api_server.py  cli.py  compression.py  config.py  events.py  extraction.py  groq_client.py  hierarchical_encoder.py  hierarchical_signal.py  interfaces.py  iterative_encoder.py  judge.py  mediator.py  models.py  msp_config.py  msp_decoder.py  msp_encoder.py  msp_encoder_old.py  msp_pipeline.py  protocol.py  semantic_judge.py  server.py  tokenization.py  trace.py  websocket.py
src/minimal_signaling/encoding/: adaptive_distilbart_pipeline.py  distilbart_encoder.py  hierarchical_adaptive_encoder.py
src/minimal_signaling/encoding/graph_based/: __init__.py  graph_compressor.py  (+5 more)
structured_data_results/: comparison.html  results.json
structured_data_results/visualizations/: iteration_1.html  iteration_2.html
tests/property/: test_compression_properties.py  test_config_properties.py  test_events_properties.py  test_extraction_properties.py  test_judge_properties.py  test_pipeline_properties.py  test_serialization_properties.py  test_tokenization_properties.py  test_trace_properties.py
