[tool.poetry]
name = "minimal-signaling-llm-agents"
version = "0.1.0"
description = "Mediated Minimal-Signaling Architecture for LLM Agent Communication"
authors = ["khattam"]
readme = "README.md"
packages = [{include = "minimal_signaling", from = "src"}]

[tool.poetry.scripts]
minimal-signaling = "minimal_signaling.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
groq = "^1.0.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
pyyaml = "^6.0.2"
sentence-transformers = "^3.3.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
websockets = "^14.1"
networkx = "^3.4.2"
pyvis = "^0.3.2"
matplotlib = "^3.9.3"
spacy = "^3.7.0"
transformers = ">=4.36.0"
torch = ">=2.1.0"
tiktoken = ">=0.5.0"
structlog = ">=23.2.0"
rich = ">=13.7.0"
httpx = ">=0.25.0"
tenacity = ">=8.2.0"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
hypothesis = ">=6.92.0"
# Code Quality
ruff = ">=0.1.8"
mypy = ">=1.7.0"
pre-commit = ">=3.6.0"
# Notebooks
jupyter = ">=1.0.0"
ipykernel = ">=6.27.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["minimal_signaling"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
